versions/v2.9/modules/en/pages/observability/istio/guides/generate-and-view-traffic.adoc
= Generate and View Traffic from Istio
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/istio-setup-guide/generate-and-view-traffic.adoc 
:product-path: observability/istio/guides/generate-and-view-traffic.adoc
ifeval::["{build-type}" != "community"]
:xref-selectors-and-scrape-configurations: xref:observability/istio/configuration/selectors-and-scrape-configurations.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-selectors-and-scrape-configurations: xref:integrations-in-rancher/istio/configuration-options/selectors-and-scrape-configurations.adoc
endif::[]

== The Kiali Traffic Graph

The Istio overview page provides a link to the Kiali dashboard. From the Kiali dashboard, you can view graphs for each namespace. The Kiali graph provides a powerful way to visualize the topology of your Istio service mesh. It shows you which services communicate with each other.

== Prerequisites

To enable traffic to show up in the graph, ensure that you have Prometheus installed in the cluster. `Rancher-istio` installs Kiali, and configures it by default to work with the `rancher-monitoring` chart. You can use `rancher-monitoring` or install your own monitoring solution.

Additionally, for Istio installations version `103.1.0+up1.19.6` and later, Kiali uses a token value for its authentication strategy. If you are trying to generate or retrieve the token (e.g. for login), note that the name of the Kiali service account in Rancher is `kiali`. For more information, refer to the https://kiali.io/docs/faq/authentication/[Kiali token authentication FAQ].

Optional: You can configure which namespaces data scraping occurs in by setting the Helm chart options described in {xref-selectors-and-scrape-configurations}[Selectors & Scrape Configs].

== Traffic Visualization

To see the traffic graph follow the steps below:

. In the cluster where Istio is installed, click *Istio* in the left navigation bar.
. Click the *Kiali* link.
. Click on *Graph* in the side nav.
. Change the namespace in the *Namespace* dropdown to view the traffic for each namespace.

If you refresh the URL to the BookInfo app several times, you should be able to see green arrows on the Kiali graph showing traffic to `v1` and `v3` of the `reviews` service. The control panel on the right side of the graph lets you configure details including how many minutes of the most recent traffic should be shown on the graph.

For additional tools and visualizations, you can go to Grafana, and Prometheus dashboards from the *Monitoring* *Overview* page
